namespace Effects
{
    public class HitContext
    {
        public int hitCount;
        public int damage;
        public EnemyHealth target;
        public EnemyDamageSource damageSource;
    }
}
