namespace Effects
{
    public interface IHitEffect
    {
        void OnHit(HitContext context);
    }

}