using Effects;
using UnityEngine;

public class MoneyHitEffect : IHitEffect
{
    private int moneyMultiplier;
    private int moneyNth;

    private int localHitCounter = 0;
    private TowerSFX towerSFX;
    private PlayerCursor cursor;
    private Sprite effectSprite;

    public MoneyHitEffect(int moneyMultiplier, int moneyNth, TowerSFX sfx = null, PlayerCursor cursor = null, Sprite effectSprite = null)
    {
        this.moneyMultiplier = moneyMultiplier;
        this.moneyNth = moneyNth;
        this.towerSFX = sfx;
        this.cursor = cursor;
        this.effectSprite = effectSprite;
    }

    public void OnHit(HitContext context)
    {
        localHitCounter++;

        if (moneyNth <= 0 || localHitCounter % moneyNth != 0)
            return;

        if (context.target == null)
            return;

        towerSFX?.PlayAbilitySFX();
        cursor?.TriggerEffectParticles(effectSprite, context.target.transform.position);

        context.target.ApplyMoneyMultiplier(moneyMultiplier);
    }
}
