public enum TowerEffectType
{
    NthHitDamage,
    ChainDamage,
    BombDamage,
    SlowEffect,
    MoneyEffect,
    ReverseEffect
}
